# high_frequency_microstructure_SIG

./: .gitignore  CMakeLists.txt  DEEP_DIVE.md  Dockerfile  README.md  railway.json  requirements.txt
.github/workflows/: ci.yml
cpp/include/: feature_engine.hpp  hawkes_mle.hpp  hjb_solver.hpp  lob_parser.hpp
cpp/src/: feature_engine.cpp  hawkes_mle.cpp  hjb_solver.cpp  lob_parser.cpp  main.cpp
cpp/tests/: test_feature_engine.cpp  test_hawkes_mle.cpp  test_hjb_solver.cpp
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertBanner.tsx  Controls.tsx  HJBSpread.tsx  Header.tsx  LOBDepth.tsx  PnLPanel.tsx  SignalChart.tsx  StatsBar.tsx
frontend/src/hooks/: useHJB.ts  useWebSocket.ts
frontend/src/types/: index.ts
python/api/: server.py
python/data/: __init__.py  loader.py  synthetic.py
python/hjb/: __init__.py  optimal_quotes.py
python/signals/: __init__.py  hawkes.py  kyle_lambda.py  ofi.py  signal_combiner.py  vpin.py
tests/: test_hjb_python.py  test_kyle_lambda.py  test_ofi.py  test_vpin.py
